--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
 	"name":"video-tag",
 	"version":"0.0.1",
 	"dependencies":{
-		"express":">=0.0.1"
+		"express":">=0.0.1",
+		"jade":">=0.0.1"
 	}
 
 }
